--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,5 +1,10 @@
 <h1>HOME</h1>
 
-<div>
-    
-</div>
+<ol>
+    <li *ngFor="let room of rooms" (click)="joinRoom(room)">{{ room.name }}</li>
+</ol>
+
+<form novalidate>
+    <label>Name:</label><input type="text" [(ngModel)]="newRoom.name" />
+    <label>Description:</label><input type="text" [(ngModel)]="newRoom.description" />
+</form>
